--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "js-cookie": "^2.2.0",
+    "path-to-regexp": "^2.4.0",
+    "vue": "^2.6.14",
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,8 +22,12 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "element-ui": "^2.15.9",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "path-browserify": "^1.0.1",
+    "sass": "~1.26.5",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
