--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "path-to-regexp": "^2.4.0",
     "vue": "^2.6.14",
     "vue-router": "^3.0.2",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "wangeditor": "^4.7.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
