--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "element-ui": "^2.15.9",
+    "element-ui": "2.13.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "path-browserify": "^1.0.1",
