--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "js-cookie": "^2.2.0",
     "path-to-regexp": "^2.4.0",
+    "relation-graph": "^2.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0",
